--- a/main.css
+++ b/main.css
@@ -2,8 +2,8 @@
   /* colores */
   --rojo: hsl(322, 100%, 66%);
   --azul: hsl(193, 100%, 96%);
-  --azul-oscuro: hsl(192, 100%, 9%)
-  --gris:hsl(208, 11%, 55%);
+  --azul-oscuro:  hsl(192, 100%, 9%);
+  --gris: hsl(208, 11%, 55%);
 
   /* fuentes */
   --font-size: 18px;
@@ -84,7 +84,7 @@ html.html {
 .main__info {
   text-align: center;
   margin: 70px 0; 
-  height: 100%;
+  height: 300px;
   padding: 0 70px;
 }
 
@@ -113,3 +113,50 @@ html.html {
   width: 100%;
   margin-top: 10px;
 }
+
+/* section cards */
+
+.cards {
+  text-align: center;
+}
+
+.cards__card1 {
+  margin-top: 50px;
+  text-align: center;
+  padding: 50px 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 30px;
+  box-shadow: 0px 0px 8px 4px #F4F4F4;
+}
+
+.card__image {
+  width: 80%;
+  margin-bottom: 70px;
+}
+
+.card__pgraph {
+  margin-top: 20px;
+  color: var(--gris);
+  line-height: 25px;
+  padding: 0 20px;
+}
+
+
+/* footer */ 
+
+.footer {
+  background-color: var(--azul-oscuro);
+}
+
+.footer__community {
+  margin-top: 100px;
+}
+
+.cards__card-button {
+  padding-bottom: 10px;
+}
+
+
+
+
