--- a/main.css
+++ b/main.css
@@ -147,6 +147,10 @@ html.html {
 
 .footer {
   background-color: var(--azul-oscuro);
+  margin-top: 50px;
+  padding: 30px;
+  height: 500px;
+  color: white;
 }
 
 .footer__community {
@@ -156,8 +160,24 @@ html.html {
 .cards__card-button {
   padding-bottom: 10px;
   font-size: calc(var(--font-size) - 8px);
+  background-color: var(--azul);
 }
 
+.footer--info {
+  margin-top: 50px;
+}
 
+.footer--info svg {
+  margin-bottom: 30px;
+}
 
+.footer__info-containter  {
+  display: flex;
+  margin-bottom: 30px;
+}
 
+.footer-icons {
+  height: 15px;
+  width: 20px;
+  margin-right: 20px;
+}
