--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ html.html {
   background-color: var(--azul-oscuro);
   margin-top: 50px;
   padding: 30px;
-  height: 500px;
+  height: 400px;
   color: white;
 }
 
@@ -180,4 +180,16 @@ html.html {
   height: 15px;
   width: 20px;
   margin-right: 20px;
+}
+
+/* legal iinfo */ 
+
+.legal-info {
+  font-family: var(--body);
+  font-size: calc(var(--font-size) - 5px);
+  text-align: center;
+}
+
+.legal-info--pgraph {
+  padding: 20px 0;
 }
